Fix balance vertical space issue on small displays

--- a/Survey/source/styles/formal/_o-question.scss
+++ b/Survey/source/styles/formal/_o-question.scss
@@ -22,6 +22,7 @@
     &.balance {
         display: flex;
         flex-wrap: wrap;
+        align-self: flex-start;
     }
 
     &.balance > .o-option-sublist {
