--- a/Survey/styles/informal/base.css
+++ b/Survey/styles/informal/base.css
@@ -1420,6 +1420,8 @@ html[dir=rtl] .balance .m-option-base {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
 }
 .o-question-response.balance > .o-option-sublist {
   display: -webkit-box;
